finished explore-section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,21 @@
         </div>
     </section>
 
+    <!--  -->
+
+    <section id="explore">
+
+        <h1>EXPLORE THE VISION</h1>
+
+        <!-- <img class="explore-img" src="images/video-3.jpg" alt=""> -->
+        <div class="explore-img" id="explore-img"> 
+
+            <div id="explore-btn-container">
+                <div class="explore-btn" id="explore-btn">></div>
+            </div>
+        </div>
+
+    </section>
 
     
 
