implemented animation in explore-section

--- a/index.html
+++ b/index.html
@@ -117,13 +117,15 @@
         <div class="explore-img" id="explore-img"> 
 
             <div id="explore-btn-container">
+                <center>
                 <div class="explore-btn" id="explore-btn">></div>
+                </center>
             </div>
         </div>
 
     </section>
 
-    
+
 
     <script src="app.js"></script>
 </body>
