finished academy-section

--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
     </section>
     <!--  -->
 
-    <section id="prefferd">
+    <section id="preferrd">
 
         <h1>BDD IS THE PREFERRED HUB FOR:</h1>
 
-        <div class="preffered-divs">
+        <div class="preferred-divs">
 
-        <div class="preffered-div">
+        <div class="preferred-div">
             <center>
             <img src="images/people-icon.png" alt="">
             <h1>1500 +</h1>
@@ -221,7 +221,7 @@
             </center>
         </div>
 
-        <div class="preffered-div">
+        <div class="preferred-div">
             <center>
             <img src="images/calendar-icon.png" alt="">
             <h1>700 +</h1>
@@ -229,7 +229,7 @@
             </center>
         </div>
 
-        <div class="preffered-div">
+        <div class="preferred-div">
             <center>
             <img src="images/thumbs-up-blue.png" alt="">
             <h1>140 +</h1>
@@ -237,7 +237,7 @@
             </center>
         </div>
         
-        <div class="preffered-div">
+        <div class="preferred-div">
             <center>
             <img src="images/thumbs-up-green.png" alt="">
             <h1>60 %</h1>
@@ -247,7 +247,37 @@
 
         </div>
 
+    </section>
+    <!--  -->
 
+    <section id="academy">
+
+        <div class="academy">
+            <img src="images/logo-academy.png" alt="">
+            <p>Providing programs to bridge the gap between the existing education providers and the long-term requirements of the job
+            market.
+            </p>
+        </div>
+
+        <div>
+        <div class="tracks">
+            <div>
+                <img src="images/10.png" alt="">
+                <h3>The Youth Track</h3>
+            </div>
+
+            <div>
+                <img src="images/11.png" alt="">
+                <h3>The University Track</h3>
+            </div>
+
+            <div>
+                <img src="images/14.png" alt="">
+                <h3>The Continuous Learning Track</h3>
+            </div>
+        </div>
+        <h4 class="blue-btn programs-btn">CLICK HERE TO CHECK OUR PROGRAMS</h4>
+        </div>
     </section>
 
 
