implemented the drop-down menus in the navbar

--- a/index.html
+++ b/index.html
@@ -17,12 +17,38 @@
             <img src="images/logo-light.png" alt="">
 
             <ul class="header-links" id="header-links">
-                <li>DISCOVER BDD</li>
-                <li>OUR PRODUCTS AND SERVICES</li>
-                <li>EVENTS</li>
-                <li>BDD ACADEMY</li>
-                <li>BLOG</li>
-                <li>WORK WITH US</li>
+
+                <li>
+                    <div class="dropdown" >
+                        <button class="dropbtn">DISCOVER BDD<span id="dd1-span"> &#x25BC</span></button>
+                        <div class="dropdown-content">
+                            <a href="#">Our Winning Formula</a>
+                            <a href="#">Social Being</a>
+                            <a href="#">Community Members</a>
+                            <a href="#">Partners</a>
+                            <a href="#">Testimonials</a>
+                        </div>
+                    </div>
+                </li>
+
+                <!-- <li id="drop-down-1"><a href="#">DISCOVER BDD<span id="dd1-span"> &#x25BC</span></a></li> -->
+                <!-- <li><a href="#"></a>OUR PRODUCTS AND SERVICES <span > &#x25BC</span></li> -->
+                <li>
+                    <div class="dropdown">
+                        <button class="dropbtn">OUR PRODUCTS AND SERVICES <span> &#x25BC</span></button>
+                        <div class="dropdown-content">
+                            <a href="#">Private Offices</a>
+                            <a href="#">Co-Working Spaces</a>
+                            <a href="#">Meeting & Event Spaces</a>
+                            <a href="#">Virtual Offices</a>
+                        </div>
+                    </div>
+                </li>
+                
+                <li><a href="#">EVENTS</a></li>
+                <li><a href="#">BDD ACADEMY</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">WORK WITH US</a></li>
                 <li class="blue-btn">JOIN US</li>
 
             </ul>
@@ -118,7 +144,7 @@
 
             <div id="explore-btn-container">
                 <center>
-                <div class="explore-btn" id="explore-btn">></div>
+                <div class="explore-btn" id="explore-btn">&#9658</div>
                 </center>
             </div>
         </div>
