fixed nav-btn & responsivness bugs

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li><a href="#">BDD ACADEMY</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">WORK WITH US</a></li>
-                <li class="blue-btn">JOIN US</li>
+                <li class="blue-btn"><a href="#">JOIN US</a></li>
 
             </ul>
 
@@ -239,7 +239,7 @@
         <div class="preferred-div">
             <center>
             <img src="images/people-icon.png" alt="">
-            <h1>1500 +</h1>
+            <h1 >1500 +</h1>
             <p>COMMUNITY MEMBERS</p>
             </center>
         </div>
@@ -289,14 +289,14 @@
                     <img src="images/slider/slide3.jpg" alt="">
                     <h3>BDD LAUNCHES "3ALAM BI DOUR hAWALEIK</h3>
                     <hr>
-                    <h5>by Beirut Digital District <br> on june 28, 2022</h5>
+                    <h5>by Beirut Digital District <br> on April 10, 2022</h5>
                 </div>
 
                 <div class="trending-div">
                     <img src="images/slider/slide7.jpg" alt="">
                     <h3>OVERCOME INTERVIEW JITTERS WITH THESE TIPS</h3>
                     <hr>
-                    <h5>by Beirut Digital District <br> on june 28, 2022</h5>
+                    <h5>by Beirut Digital District <br> on June 28, 2022</h5>
                 </div>
 
                 <div class="trending-div">
@@ -304,9 +304,8 @@
                     <h3>HABITS TO IMPROVE YOUR CRITICAL THINKING SKILS</h3
                         >
                     <hr>
-                    <h5>by Beirut Digital District <br> on june 28, 2022</h5>
+                    <h5>by Beirut Digital District <br> on July 17, 2022</h5>
                 </div>
-
 
             </div>
 
