fixed responsivness bugs in join-bdd-section

--- a/index.html
+++ b/index.html
@@ -207,8 +207,10 @@
                             <ul>
                                 <li><span>&#8883</span>Business Address</li>
                                 <li><span>&#8883</span>Business Address Plus</li>
-    
-                                <a href="#" class="blue-btn ">KNOW MORE</a>
+                                <br><br>
+                                <center>
+                                    <a href="#" class="blue-btn ">KNOW MORE</a>
+                                </center>
                             </div>
                             <!--  -->
                         </div>
